fixed layout and colors. dark mode is still buggy.

--- a/data-esamor/vue-admin-dashboard/src/global-styles/colors.sass
+++ b/data-esamor/vue-admin-dashboard/src/global-styles/colors.sass
@@ -1,3 +1,6 @@
 $indigo: #788cff
 $black: #363636
-$gold: #e3cc80
+$gold: #FFE469
+$deep-data: #2E2E4D
+$perfume: #FFB2E0
+$mint: #A5FFC9
